<resources>
    <string name="kakao_app_key">672a27cc57650726454f648c71d176be</string>
    <string name="facebook_app_id">1695537567426597</string>
    <string name="app_name">HAND</string>
    <string name="usermgmg_signup_button">회원가입하기</string>
    <string name="main_map">지도</string>
    <string name="main_friend">친구</string>
    <string name="main_event">이벤트</string>
    <string name="main_setting">설정</string>

    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="nickname">닉네임</string>
    <string name="join">회원가입</string>
    <string name="back">돌아가기</string>
    <string name="login">로그인</string>
    <string name="open">열음</string>
    <string name="close">닫음</string>

    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">빈-프레그먼트</string>

    <string name="user_profile_name_format">%s님</string>
    <string name="user_profile_name_empty">환영합니다!</string>
    <string name="map_post_title">제목</string>
    <string name="map_post_content">내용을 입력해주세요...</string>
    <string name="map_post_picture">사진 추가..</string>
    <string name="action_post_done">작성완료</string>
    <string name="dialog_back">돌아가기</string>
    <string name="dialog_cancel">취소</string>

    <string name="friend_add">친구요청</string>
    <string name="friend_cancel">요청취소</string>
    <string name="follow">팔로우</string>
    <string name="unfollow">팔로우취소</string>


    <string name="friend_search_fail">존재하지 않는 친구입니다.</string>
    <string name="friend_search_me">자기 자신은 영원한 친구입니다.</string>
    <string name="friend_search_friend">이미 등록된 친구입니다</string>
    <string name="change_photo">바꾸기</string>
    <string name="dialog_make">만들기</string>
    <string name="Globe">Globe</string>
    <string name="action_search">찾기</string>
    <string name="action_close">닫기</string>
    <string name="map_post_here">여기에 글쓰기</string>
    <string name="dialog_delete">삭제하기</string>
    <string name="gender">성별</string>
    <string name="gender_man">남자</string>
    <string name="gender_woman">여자</string>
    <string name="map_room_drawer_tab_add">탭하여 추가하기</string>
    <string name="map_room_drawer_friend_history">친구들의 Hand 기록 보기</string>
    <string name="map_room_drawer_name_format">%s님의 Hand 기록입니다.</string>
    <string name="map_room_drawer_post_format">%d건</string>
    <string name="map_room_drawer_post_rest">의 기록</string>
    <string name="dialog_add">추가하기</string>
    <string name="dialog_kick">추방하기</string>
    <string name="invite_friend">친구초대</string>
    <string name="dialog_close">닫기</string>
    <string name="empty_friend_list">친구 목록이 비어있습니다!</string>
    <string name="action_plus_friend">추가하기</string>

    <string-array name="select_photo_array">
        <item>기본이미지로 변경</item>
        <item>앨범에서 사진선택</item>
        <item>프로필사진 보기</item>
    </string-array>

</resources>
