<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Main.fragments.MainMenuPaneFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_map"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="8dp"
            android:background="@color/light_gray"
            android:gravity="center"
            android:text="@string/main_map"
            android:textColor="@android:color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button_friend"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="8dp"
            android:background="@color/light_gray"
            android:gravity="center"
            android:text="@string/main_friend"
            android:textColor="@android:color/black"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_event"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="8dp"
            android:background="@color/light_gray"
            android:gravity="center"
            android:text="@string/main_event"
            android:textColor="@android:color/black"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button_setting"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="8dp"
            android:background="@color/light_gray"
            android:gravity="center"
            android:text="@string/main_setting"
            android:textColor="@android:color/black"
            android:textSize="40sp" />
    </LinearLayout>
</LinearLayout>