<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.fragments.HandLoginFragment">

    <ImageView
        android:id="@+id/hand_login_logo"
        android:src="@drawable/hand_logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/login_input_container"
        android:orientation="vertical"
        android:layout_below="@id/hand_login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/join_edit" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/login_gray" />

        <EditText
            android:id="@+id/login_edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/join_edit" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn_join"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/login_input_container"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:text="@string/join"
        android:textColor="@color/gray" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:layout_below="@id/login_btn_join"
        android:background="@drawable/login_button_background"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_below="@id/login_btn_login"
        android:orientation="horizontal">

        <com.kakao.usermgmt.LoginButton
            android:id="@+id/button_kakao_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp" />

        <View
            android:layout_marginTop="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center"
            android:background="@color/gray"
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/sign_in_facebook_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:text="@string/Globe"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>