<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.globe.hand.Login.LoginActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/text_hand_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="164dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textAppearance="@style/join_label" />

        <EditText
            android:id="@+id/login_edit_id"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="text"
            android:text="@string/id"
            android:textAppearance="@style/join_edit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="@style/join_label" />

        <EditText
            android:id="@+id/login_edit_pass"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="textPassword"
            android:text="@string/password"
            android:textAppearance="@style/join_edit" />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/login_btn_join"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/join"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_login"
        app:layout_constraintVertical_bias="0.245" />


    <com.kakao.usermgmt.LoginButton
        android:id="@+id/button_kakao_login"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn_join" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/sign_in_facebook_button"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_kakao_login" />


</android.support.constraint.ConstraintLayout>
