<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/map_room_drawer_background_color"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginBottom="64dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/hand_logo" />

            <TextView
                android:id="@+id/map_room_drawer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_map_room_post_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map_room_drawer_post_rest"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/map_room_drawer_show_category_list"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="right"
                    android:scaleType="centerInside"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/map_room_drawer_category_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_height="64dp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/map_room_drawer_category_plus_container"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginBottom="32dp">

                <ImageView
                    android:id="@+id/map_room_drawer_category_plus"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:padding="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/friend_plus" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/map_room_drawer_category_plus"
                    android:text="@string/map_room_drawer_tab_add"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/map_room_drawer_member_container"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/map_room_drawer_friend_history"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/map_room_drawer_member_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_height="64dp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="24dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.NavigationView>